# plugin-vercel-ai-gateway

./: .gitignore  README.md  package.json  renovate.json  tsup.config.ts
.github/workflows/: npm-deploy.yml
prompts/scripts/: generate-specs.js
python/: README.md  pyproject.toml
python/elizaos_plugin_gateway/: __init__.py  client.py  config.py  plugin.py  types.py
python/tests/: __init__.py  conftest.py  test_integration.py  test_unit.py
rust/: Cargo.toml  README.md
rust/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
rust/tests/: integration_tests.rs  unit_tests.rs
src/: index.ts  types.ts
src/handlers/: embedding.ts  image.ts  index.ts  moderation.ts  object.ts  text.ts  transcription.ts  tts.ts
src/providers/: gatewayProvider.ts  openaiProvider.ts
src/utils/: client.ts  config.ts
typescript/: .npmignore  biome.json  biome.json.bak  build.ts  index.node.ts  index.ts  init.ts  package.json  tsconfig.build.json  tsconfig.json
typescript/__tests__/: plugin.test.ts  test-utils.ts
typescript/models/: embedding.ts  image.ts  index.ts  object.ts  text.ts
typescript/providers/: client.ts  index.ts
typescript/types/: index.ts
typescript/utils/: config.ts
